--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,16 @@
 target/
 **/*.rs.bk
 
-# Data Stores (SQLite, Tantivy)
-allman_db
-allman_index
-allman_repo
-simulation_logs_repo
+# Runtime Data (Tantivy index, Git audit repo)
+allman_index/
+allman_repo/
+simulation_logs_repo/
+
+# Legacy SQLite artifacts
+*.db
+*.db-shm
+*.db-wal
+allman_db/
 
 # Environment
 .env
@@ -17,4 +22,4 @@ vllm_cache/
 
 # OS
 .DS_Store
-*.db
+Thumbs.db
